--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -1,6 +1,7 @@
-{{ reserveImport .Package.PackagePath "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRows" "loadRowX" "loadUniqueEdge" "loadUniqueNode" "AlwaysDenyRule" "PrivacyPolicy" "query"}}
+{{ reserveImport .Package.PackagePath "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRows" "loadRowX" "loadUniqueEdge" "loadUniqueNode" "AlwaysDenyRule" "PrivacyPolicy" "query" "Ent"}}
 {{ reserveImport .Package.SchemaPackagePath "Field" "getFields"}}
 {{ reserveImport .Package.InternalImportPath "EdgeType" "NodeType" }}
+{{ reserveImport "src/ent/loadAny" "loadEntByType" "loadEntXByType"}}
 
 {{with .NodeData -}}
 {{/* TODO break this up to make it easier to use? */}}
@@ -317,32 +318,57 @@ export class {{$baseClass}} {
   {{end -}}
 
   {{ range $edge := .EdgeInfo.FieldEdges -}}
-    {{$edgeName := .CamelCaseEdgeName -}}
-    {{with .NodeInfo -}}
-      async load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
+    {{  $edgeName := .CamelCaseEdgeName -}}
+    {{ if $edge.NodeTypeField}}
+      async load{{$edgeName}}(): Promise<{{useImport "Ent"}}| null>{
         {{ if $edge.Nullable -}}
           if (!this.{{$edge.TSFieldName}}) {
             return null;
           }
         {{end -}}
-        return {{useImport "loadEnt"}}(
-          this.viewer, 
+        return {{useImport "loadEntByType"}}(
+          this.viewer,
+          this.{{$edge.NodeTypeField}} as unknown as {{useImport "NodeType"}},
           this.{{$edge.TSFieldName}},
-          {{useImport .Node}}.loaderOptions(),
         );
       }
-
-      {{if not $edge.Nullable -}}
-        load{{$edgeName}}X(): Promise<{{useImport .Node}}> {
-          return {{useImport "loadEntX"}}(
+      
+      {{ if not $edge.Nullable -}}
+        load{{$edgeName}}X(): Promise<{{useImport "Ent"}}> {
+        return {{useImport "loadEntXByType"}}(
+          this.viewer, 
+          this.{{$edge.NodeTypeField}} as unknown as {{useImport "NodeType"}},
+          this.{{$edge.TSFieldName}},
+        );
+      }
+      {{end -}}
+    {{ else -}}
+      {{with .NodeInfo -}}
+        async load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
+          {{ if $edge.Nullable -}}
+            if (!this.{{$edge.TSFieldName}}) {
+              return null;
+            }
+          {{end -}}
+          return {{useImport "loadEnt"}}(
             this.viewer, 
             this.{{$edge.TSFieldName}},
             {{useImport .Node}}.loaderOptions(),
           );
         }
-      {{end -}}
+
+        {{if not $edge.Nullable -}}
+          load{{$edgeName}}X(): Promise<{{useImport .Node}}> {
+            return {{useImport "loadEntX"}}(
+              this.viewer, 
+              this.{{$edge.TSFieldName}},
+              {{useImport .Node}}.loaderOptions(),
+            );
+          }
+        {{end -}}
+      {{end}}
     {{end}}
-  {{end -}}
+  {{end}}
 }
 
 {{end -}}
