flag node_type to only be written once since we want custom resolvers

--- a/internal/graphql/ts_templates/node.tmpl
+++ b/internal/graphql/ts_templates/node.tmpl
@@ -10,6 +10,7 @@ interface NodeQueryArgs {
 
 const resolver = new {{useImport "EntNodeResolver"}}({{useImport "loadEntByType"}});
 {{useImport "registerResolver"}}("entNode", resolver);
+// add any custom Node Resolvers here
 {{/* lesigh done in golang */ -}}
 {{$ignore := useImport "resolveID"}}
 
