--- a/internal/tscode/const.tmpl
+++ b/internal/tscode/const.tmpl
@@ -1,3 +1,5 @@
 {{template "enum.tmpl" .NodeType }}
 
-{{template "enum.tmpl" .EdgeType }}
+{{ if .EdgeType.Values -}}
+  {{template "enum.tmpl" .EdgeType }}
+{{end -}}
