don't export things that shouldn't be exported in generated gql files

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -38,8 +38,11 @@
 {{$nodeInstance := .NodeInstance -}}
 
 {{ range $gqlNode := .GQLNodes -}}
-
-  export const {{$gqlNode.Type}} = new {{useImport $gqlNode.GQLType}}({
+  {{ if $gqlNode.Exported -}}
+    export const {{$gqlNode.Type}} = new {{useImport $gqlNode.GQLType}}({
+  {{ else -}}
+    const {{$gqlNode.Type}} = new {{useImport $gqlNode.GQLType}}({
+  {{ end -}}
     name: "{{$gqlNode.Node}}",
     {{ if eq $gqlNode.GQLType "GraphQLInputObjectType" -}}
       fields: (): {{useImport "GraphQLInputFieldConfigMap"}} => ({
