--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -1,5 +1,6 @@
-{{ reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "Builder" }}
+{{ reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "Builder" "setEdgeTypeInGroup" }}
 {{ reserveImport .Package.PackagePath "Viewer" "ID" "Ent" "AssocEdgeInputOptions" "AllowIfHasIdentity" "PrivacyPolicy" "AlwaysDenyRule"}}
+{{ reserveImport "src/ent" "NodeType"}}
 
 {{ range .NodeData.GetImportPathsForDependencies -}}
   {{ if .DefaultImport -}}
@@ -16,6 +17,12 @@
 
 {{ $action := .Action -}}
 {{ $actionName := printf "%sBase" $action.GetActionName -}}
+
+{{ range $action.GetTSEnums -}}
+  {{if not .Imported -}}
+    {{ template "enum.tmpl" . -}}
+  {{end -}}
+{{ end}}
 
 {{ range $int := $action.GetCustomInterfaces -}}
   interface {{$int.TSType}} {
@@ -214,7 +221,19 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
         ): Promise<{{$node}}> {
       {{end -}}
       let {{$instance}} = await {{$node}}.loadX(viewer, id);
-      {{if $hasInput -}}
+      {{ if edgeGroupAction $action -}}
+        {{$edgeGroup := $action.GetEdgeGroup -}}
+        const action = new this(viewer, {{$instance}}, input);
+        await {{useImport "setEdgeTypeInGroup"}}(
+          action.builder.orchestrator,
+          input.{{$edgeGroup.TSGroupStatusName}},
+          {{$instance}}.id,
+          input.{{$edgeGroup.GetIDArg}},
+          {{useImport "NodeType"}}.{{$edgeGroup.NodeInfo.Node}},
+          {{$instance}}.{{$edgeGroup.GetStatusMapMethod}}(),
+        );
+        return await action.saveX();
+      {{else if $hasInput -}}
         return await new this(viewer, {{$instance}}, input).saveX();
       {{else if edgeAction $action -}}
         return await new this(viewer, {{$instance}})
