--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -1,4 +1,4 @@
-{{ reserveImport .Package.PackagePath "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRows" "loadRowX" "loadUniqueEdge" "loadUniqueNode" "AlwaysDenyRule" "AllowIfViewerRule" "PrivacyPolicy" "query" "Ent"}}
+{{ reserveImport .Package.PackagePath "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRows" "loadRowX" "loadUniqueEdge" "loadUniqueNode" "AlwaysDenyRule" "AllowIfViewerRule" "PrivacyPolicy" "query" "Ent" "getEdgeTypeInGroup"}}
 {{ reserveImport .Package.SchemaPackagePath "Field" "getFields"}}
 {{ reserveImport .Package.InternalImportPath "EdgeType" "NodeType" }}
 {{ reserveImport "src/ent/loadAny" "loadEntByType" "loadEntXByType"}}
@@ -233,6 +233,42 @@ export class {{$baseClass}} {
   static getField(key: string): {{useImport "Field"}} | undefined{
     return {{$baseClass}}.getSchemaFields().get(key);
   }
+
+  {{ range $group := .EdgeInfo.AssocGroups -}}
+    {{if $group.NullStateFn -}}
+    // this should be overwritten by subclasses as needed. 
+    protected async {{$group.NullStateFn}}() {
+      return {{$group.ConstType}}.{{$group.DefaultNullState}};
+    }
+    {{end}}
+
+    {{$group.GetStatusMapMethod}}() {
+      let m:Map<{{$group.ConstType}}, {{useImport "EdgeType"}}> = new Map();
+      {{range $k, $v := $group.GetStatusMap -}}
+        m.set({{$group.ConstType}}.{{$k}}, {{useImport "EdgeType"}}.{{$v}});
+      {{end -}}
+      return m;
+    }
+
+    async {{$group.GetStatusMethod}}(): Promise<{{$group.ConstType}}> {
+      const ret = await this.{{$group.NullStateFn}}();
+      if (!this.viewer.viewerID) {
+        return ret;
+      }
+      const g = await {{useImport "getEdgeTypeInGroup"}}(
+        this.viewer,
+        this.id,
+        this.viewer.viewerID!,
+        this.get{{$group.ConstType}}Map(),
+      );
+      if (g) {
+        return g[0];
+      }
+      return ret;
+    }
+  {{end -}}
+
+
 
   {{/* load edges and load objects */ -}}
   {{range $edge := .EdgeInfo.Associations -}}
