--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -6,11 +6,15 @@
 
 {{/* import types that we may need e.g. UserType, ContactType, etc */}}
 {{ range $baseObj.Imports -}} 
-  {{reserveImport .ImportPath .Type}}
+  {{if .ImportPath -}}
+    {{reserveImport .ImportPath .Type}}
+  {{end -}}
 {{ end -}}
 
 {{ range $baseObj.DefaultImports -}} 
-  {{reserveDefaultImport .ImportPath .Type}}
+  {{if .ImportPath -}}
+    {{reserveDefaultImport .ImportPath .Type}}
+  {{end -}}
 {{ end -}}
 
 {{ range $baseObj.TSInterfaces -}}
@@ -30,6 +34,10 @@
   }
 
 {{end}}
+
+{{ range .Enums -}}
+  {{ template "enum.tmpl" . -}}
+{{ end -}}
 
 {{/* these 2 probably need to change */}}
 {{/* TODO these definitely need to change now */}}
@@ -70,7 +78,9 @@
             {{ else -}}
               resolve: ({{$nodeInstance}}: {{$gqlNode.TSType}}, args: {}) => {
             {{ end -}}
-              {{$field.FunctionContents}};
+              {{ range $field.FunctionContents -}}
+                {{.}}
+              {{ end -}}
             },
           {{end -}}
         },
