--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -1,5 +1,6 @@
 {{ reserveImport .Package.InternalImportPath "EdgeType" "NodeType" }}
-{{ reserveImport .Package.PackagePath "Ent" "ID" "Data" "Viewer" "EdgeQuerySource" "BaseEdgeQuery"}}
+{{ reserveImport .Package.PackagePath "Ent" "ID" "Data" "Viewer" "EdgeQuerySource" "BaseEdgeQuery" "AssocEdge"}}
+{{$importPath := .Package.InternalImportPath -}}
 
 {{$schema := .Schema}}
 {{$nodeData := .NodeData -}}
@@ -15,13 +16,16 @@
   {{ end}}
 
   {{$node := useImport .Node}}
-  {{$thisType := printf "new (viewer: Viewer, src: EdgeQuerySource<%s>) => T" $node}}
 
   {{range $edge := .EdgeInfo.Associations}}
     {{$name := printf "%sBase" $edge.TsEdgeQueryName -}}
-  export class {{$name}} extends {{useImport "BaseEdgeQuery"}}<{{$node}}, {{useImport .NodeInfo.Node}}> {
+    {{ reserveImport $importPath $edge.TsEdgeQueryEdgeName -}}
+    {{$edgeName := useImport $edge.TsEdgeQueryEdgeName -}}
+    {{$thisType := printf "new (viewer: Viewer, src: EdgeQuerySource<%s>) => T" $node }}
+
+  export class {{$name}} extends {{useImport "BaseEdgeQuery"}}<{{$node}}, {{useImport .NodeInfo.Node}}, {{$edgeName}}> {
     constructor(viewer: {{useImport "Viewer"}}, src: {{useImport "EdgeQuerySource"}}<{{$node}}>) {
-      super(viewer, src, {{useImport "EdgeType"}}.{{$edge.TsEdgeConst}}, {{useImport .NodeInfo.Node}}.loaderOptions());
+      super(viewer, src, {{useImport "EdgeType"}}.{{$edge.TsEdgeConst}}, {{useImport .NodeInfo.Node}}.loaderOptions(), {{$edgeName}});
     }
 
     static query<T extends {{$name}}>(
