specify custom indices

--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -59,6 +59,7 @@ for (const key in potentialSchemas) {
     enumTable: schema.enumTable,
     dbRows: schema.dbRows,
     constraints: schema.constraints,
+    indices: schema.indices,
     hideFromGraphQL: schema.hideFromGraphQL,
   };
 }
