--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -50,6 +50,8 @@
   {{range $edge := .EdgeInfo.ForeignKeys -}}
     {{$name := printf "%sBase" $edge.TsEdgeQueryName -}}
     {{$node := useImport $edge.NodeInfo.Node -}}
+    {{$thisType := printf "new (viewer: Viewer, src: %s | ID ) => T" $node }}
+
     export class {{$name}} extends {{useImport "CustomEdgeQueryBase"}}<{{$node}}> {
       constructor(viewer: {{useImport "Viewer"}}, src: {{$node}} | {{useImport "ID"}}) {
         let id: {{useImport "ID"}};
@@ -60,7 +62,15 @@
         }
         super(viewer, src, {{$node}}.loaderOptions(), {{useImport "query"}}.Eq({{$edge.QuotedDBColName}}, id));
       }
+
+      static query<T extends {{$name}}>(
+        this: {{$thisType}},
+        viewer: {{useImport "Viewer"}},
+        src: {{$node}} | {{useImport "ID"}},
+      ): T {
+        return new this(viewer, src);
+      }
     }
-    
+
   {{end }}
 {{end -}}
