--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -332,6 +332,7 @@ export class {{$baseClass}} {
           edgeType: {{$edgeType}}.{{$edge.TsEdgeConst}}, 
           id2,
           context: this.viewer.context,
+          ctr: {{useImport "AssocEdge"}}
         });
       }
      {{end}}
