--- a/internal/graphql/ts_templates/connection.tmpl
+++ b/internal/graphql/ts_templates/connection.tmpl
@@ -11,7 +11,7 @@
 
 export const {{ printf "%sType" $conn.Edge.GetGraphQLConnectionName}} = () => {
   return new {{useImport "GraphQLConnectionType"}}(
-   "{{$conn.Edge.GetGraphQLEdgePrefix}}",
+   "{{$conn.Edge.TsEdgeConst}}",
    {{useImport $conn.NodeType -}},
    {{ $obj := .CustomObject -}}
    {{ if $obj -}}
@@ -27,7 +27,7 @@ export const {{ printf "%sType" $conn.Edge.GetGraphQLConnectionName}} = () => {
     {{ end -}}
     {
       fields: (): {{useImport "GraphQLFieldConfigMap"}}<
-        {{useImport "GraphQLEdge"}}<{{useImport $conn.Edge.TsEdgeQueryEdgeName}}>,
+        {{useImport "GraphQLEdge"}}<{{useImport "EventActivityToAttendingEdge"}}>,
         {{useImport "RequestContext"}}
       > => ({
         {{ template "field.tmpl" (dict "Base" $baseObj "Node" $obj "NodeInstance" "edge") -}}
